Added image to Hello World

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 	<h2>Hello World </h2>
+	<div>
+		<img src="img_benfit.png" alt="git benfit" style="width:50%; max-width: 660px;">
+	</div>
 	<p>This is my first git-hello world </p>
 	<p>A new line in our file!</p>
 </body>
