--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
 	<h2>Hello World </h2>
 	<p>This is my first git-hello world </p>
-	<p>A new line in our file!</p>
+	<p>This line is here to show how merging works.</p>
 </body>
 </html>
