--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 	</div>
 	<p>This is my first git-hello world </p>
 	<p>A new line in our file!</p>
+	<div><img src="say-hello.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 </body>
 </html>
