Update Index.html with one line

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	</div>
 	<p>This is my first git-hello world </p>
 	<p>This line is here to show how merging works.</p>
+	<p>This is PushChanges testing </p>
 	<div><img src="say-hello.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
 </body>
